fix an overflow issue when material icon is used in stepper circle

--- a/assets/sass/material/_stepper.scss
+++ b/assets/sass/material/_stepper.scss
@@ -112,6 +112,10 @@
       background-color: $stepper-icon-bg-active;
       color: $stepper-icon-color-active;
     }
+
+    .material-icons {
+      font-size: 1.333em;
+    }
   }
 
   .stepper-text {
